# dacite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test_input.dt
.build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
.github/workflows/: ci.yml
docs/: lexer.md
examples/: overview.dt
src/: ast.cpp  ast.h  chunk.cpp  chunk.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  source_span.h  token.cpp  token.h  value.cpp  value.h  vm.cpp  vm.h
tests/: lexer_test.cpp  parser_test.cpp  test_errors.dt  test_numbers.dt  test_operators.dt  test_strings.dt  vm_test.cpp
